tests/snapshots/atributes.html.snap
---
source: tests/cases_tests.rs
input_file: tests/cases/html/atributes.html
---
HtmlRoot(
  doctype: None,
  children: [
    Node(
      children: [],
      node_type: Element(Element(
        tag_name: "div",
        atributes: {
          "data-test": "test",
          "data-test-2": "test2",
          "id": "main",
          "style": "color: red",
        },
      )),
    ),
  ],
)
