tests/snapshots/css_parser_class_declaration.snap
---
source: tests/snapshot_tests.rs
---
StyleSheet(
  rules: [
    Rule(
      selectors: [
        Simple(SimpleSelector(
          tag_name: None,
          id: None,
          class: [
            "test",
          ],
        )),
      ],
      declarations: [
        Declaration(
          name: "color",
          value: Keyword("red"),
        ),
      ],
    ),
  ],
)
