tests/snapshots/html_parser_atributes.snap
---
source: tests/snapshot_tests.rs
---
HtmlRoot(
  doctype: None,
  children: [
    Node(
      children: [],
      node_type: Element(Element(
        tag_name: "div",
        atributes: {
          "data-test": "test",
          "data-test-2": "test2",
          "id": "main",
          "style": "color: red",
        },
      )),
    ),
  ],
)
