tests/snapshots/html_parser_nested_element.snap
---
source: tests/snapshot_tests.rs
---
HtmlRoot(
  doctype: None,
  children: [
    Node(
      children: [
        Node(
          children: [
            Node(
              children: [],
              node_type: Text("Hello"),
            ),
          ],
          node_type: Element(Element(
            tag_name: "p",
            atributes: {},
          )),
        ),
      ],
      node_type: Element(Element(
        tag_name: "div",
        atributes: {},
      )),
    ),
  ],
)
