tests/snapshots/html_parser_single_element.snap
---
source: tests/snapshot_tests.rs
---
HtmlRoot(
  doctype: None,
  children: [
    Node(
      children: [],
      node_type: Element(Element(
        tag_name: "div",
        atributes: {},
      )),
    ),
  ],
)
