tests/snapshots/html_parser_text.snap
---
source: tests/snapshot_tests.rs
---
HtmlRoot(
  doctype: None,
  children: [
    Node(
      children: [
        Node(
          children: [
            Node(
              children: [],
              node_type: Text("Hello world!"),
            ),
          ],
          node_type: Element(Element(
            tag_name: "p",
            atributes: {},
          )),
        ),
        Node(
          children: [
            Node(
              children: [],
              node_type: Text("How are you? "),
            ),
            Node(
              children: [
                Node(
                  children: [],
                  node_type: Text("David"),
                ),
              ],
              node_type: Element(Element(
                tag_name: "em",
                atributes: {},
              )),
            ),
          ],
          node_type: Element(Element(
            tag_name: "p",
            atributes: {},
          )),
        ),
      ],
      node_type: Element(Element(
        tag_name: "div",
        atributes: {},
      )),
    ),
  ],
)
