tests/snapshots/nested_element.html.snap
---
source: tests/cases_tests.rs
input_file: tests/cases/html/nested_element.html
---
HtmlRoot(
  doctype: None,
  children: [
    Node(
      children: [
        Node(
          children: [
            Node(
              children: [],
              node_type: Text("Hello"),
            ),
          ],
          node_type: Element(Element(
            tag_name: "p",
            atributes: {},
          )),
        ),
      ],
      node_type: Element(Element(
        tag_name: "div",
        atributes: {},
      )),
    ),
  ],
)
